syntax = "proto3";

import public "n0core/lib/proto/resource/port.proto";
import public "n0core/lib/proto/resource/volume.proto";

message VM {
  State state = 1;
  string id = 2;
  string host = 3;
  string arch = 4;
  uint32 vcpus = 5;
  uint32 memory_mb = 6;
  string vnc_password = 7;
  string volume_id = 8;
  PowerState power_state = 9;
  repeated Attachable attachables = 10;

  message Attachable {
    oneof Resource {
      Port Port = 1;
      Volume Volume = 2;
    }
  }

  enum PowerState {
    BOOT = 0;
    REBOOT = 1;
    POWEROFF = 2;
    HALT = 3;
  }

  enum State {
    STARTED = 0;
    STOPPED = 1;
    RESTARTED = 2;
    HALTED = 3;
    DESTROYED = 4;
  }
}
