syntax = "proto3";

message Volume {
  string id = 1;
  string host = 2;
  uint32 size_mb = 3;

  enum State {
    CLAIMED = 0;
    RELEASED = 1;
  }
}
